# rollkit-ibc

./: .gitignore  Cargo.toml  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: cw-check.yml  e2e.yml  lint.yml  rust.yml  test.yml
e2e/interchaintestv8/: .golangci.yml  README.md  basic_test.go  go.mod  go.sum  rollkit_test.go
e2e/interchaintestv8/chainconfig/: chain_config.go  encoding.go  genesis.go
e2e/interchaintestv8/e2esuite/: suite.go
proto/: buf.yaml
proto/ibc/lightclients/rollkit/v1/: rollkit.proto
src/: contract.rs  error.rs  handlers.rs  helpers.rs  lib.rs  msg.rs  response.rs
src/client_message/: client_message.rs  da_data.rs  definition.rs  header.rs  mod.rs
src/client_state/: common.rs  da_params.rs  definition.rs  execution.rs  mod.rs  validation.rs
src/consensus_state/: definition.rs
src/context/: ctx.rs  custom_ctx.rs  execution_ctx.rs  mod.rs  validation_ctx.rs
src/types/: client_message.rs  client_state.rs  client_type.rs  codec.rs  consensus_state.rs  da_data.rs  error.rs  header.rs  mod.rs
