[package]
name         = "rollkit-ibc"
version      = "0.1.0"
authors      = ["Interchain GmbH <ibc@interchain.io>"]
edition      = "2021"
rust-version = "1.66"
license      = "MIT OR Apache-2.0"
readme       = "./README.md"
repository   = "https://github.com/cosmos/rollkit-ibc"
keywords     = ["rollup", "rollkit", "ibc", "light-client", "CosmWasm"]
description  = """
    Contains the CosmWasm contract implementation of the `rollkit` light client.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.15.1
"""

[dependencies]
base64 = "0.22.0"
cosmwasm-schema = "1.5.4"
cosmwasm-std 	  = { version = "1.5.4", features = ["stargate"] }
ibc-core = { git = "https://github.com/cosmos/ibc-rs.git", rev = "4ea4dcb", default-features = false, features = ["schema"] }
ibc-core-host = { git = "https://github.com/cosmos/ibc-rs.git", rev = "4ea4dcb", default-features = false, features = ["schema"] }
ibc-client-tendermint = { git = "https://github.com/cosmos/ibc-rs.git", rev = "4ea4dcb", default-features = false, features = ["schema"] }
ibc-client-cw = { git = "https://github.com/cosmos/ibc-rs.git", rev = "4ea4dcb", default-features = false }
ibc-proto = { version = "0.44.0", default-features = false }
prost = "0.12.4"
tendermint = "0.36.0"
tendermint-light-client-verifier = "0.36.0"

[patch.crates-io]
ibc-proto = { git = "https://github.com/cosmos/ibc-proto-rs.git", rev = "f10b35e768ec39db4d14f559d78470876d5a68b4", default-features = false } # "0.42.2"
